--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,20 @@
+# Base de datos
 DB_USER=
-DB_PASSWORD= 
+DB_PASSWORD=
 DB_NAME=
-DB_PORT= 
-DB_HOST= 
-HOST_SERVER= 
-PORT_SERVER= 
+DB_HOST=
+DB_PORT=
+
+# Servidor
+HOST_SERVER=localhost
+PORT_SERVER=8080
+
+# SSL
+SSL_ENABLED=false # Cambia a true si sirves HTTPS directamente desde Go
+SSL_CERT_PATH=
+SSL_KEY_PATH=
+SSL_DHPARAM_PATH=
+SSL_OPTIONS_PATH=
+
+# JWT
+JWT_SECRET=
